--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "rexrobotix",
   "version": "0.0.1",
-  "private": true,
-  "description": "the world of rex the robot",
-  "main": "index.js",
+  "description": "node",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davideliason/rexrobotix.git"
   },
   "keywords": [
-    "node.js"
+    "node"
   ],
   "author": "David Eliason",
   "license": "MIT",
@@ -22,8 +20,6 @@
   },
   "homepage": "https://github.com/davideliason/rexrobotix#readme",
   "dependencies": {
-    "aws-sdk": "^2.272.1",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3"
   }
 }
