--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
