--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "mongodb": "^3.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "passport": "^0.4.0",
